tests/errors/module_summon_errors.sad
summon totally_nonexistent_module
